--- a/css/style.css
+++ b/css/style.css
@@ -199,7 +199,7 @@ header {
     height: 500px;
     position: relative;
     margin-top: 80px;
-    background-image: url(../IMG/FONDO.jpg);
+    background-image: url(../img/FONDO.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
